modified background-repeat to repeat-y to try fix zoomed image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ nav a.active {
     min-height: 900px;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
     margin: 0;
 }
@@ -256,7 +256,7 @@ footer a:visited {
     min-height: 800px;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
     margin: 0px;
 }
@@ -319,7 +319,7 @@ td {
     min-height: 850px;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
     margin: 0px;
 }
